--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@ title: Clean Blog
 header-img: img/home-bg.jpg
 email: your-email@yourdomain.com
 description: "Write your site description here. It will be used as your sites meta description as well!"
-baseurl: "/startbootstrap-clean-blog-jekyll"
-url: "http://yourdomain.com"
-twitter_username: SBootstrap
-github_username:  davidtmiller
-facebook_username:  IronSummitMedia
+baseurl: "/blog"
+url: "http://benliney.github.io"
+twitter_username: 
+github_username:  
+facebook_username: 
 
 # Build settings
 markdown: kramdown
